src/objects/ToothCabinetProduct__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tooth Cabinet Products</relationshipLabel>
        <relationshipName>Tooth_Cabinet_Products</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ArticleSKU__c</fullName>
        <label>Article (SKU)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomerEarnings10__c</fullName>
        <label>Customer Earnings 10%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IndicatorFlag__c</fullName>
        <formula>IF(IndicatorNr__c &lt;3, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red Flag&quot;), 
IF(IndicatorNr__c =3, IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Yellow Flag&quot;),
IF(IndicatorNr__c &gt;3, IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Green Flag&quot;),
&quot;&quot;)))</formula>
        <label>Indicator Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IndicatorNr__c</fullName>
        <label>Indicator Nr</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InstalledDate__c</fullName>
        <label>Installed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlannedTurnover__c</fullName>
        <label>Planned Turnover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Tooth Cabinet Products</relationshipLabel>
        <relationshipName>Tooth_Cabinet_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuantityofBasicLoad__c</fullName>
        <label>Quantity of Basic Load</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarter_Year__c</fullName>
        <description>Expected Format &quot;Q2 - 2020&quot;</description>
        <label>Quarter/Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToothCabinet__c</fullName>
        <label>Tooth Cabinet</label>
        <referenceTo>ToothCabinet__c</referenceTo>
        <relationshipLabel>Tooth Cabinet Products</relationshipLabel>
        <relationshipName>Tooth_Cabinet_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TotalRepurchase__c</fullName>
        <description>Refill Sales Total since basic load</description>
        <inlineHelpText>Refill Sales Total since basic load</inlineHelpText>
        <label>Total Repurchase</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Turnover__c</fullName>
        <label>Turnover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Tooth Cabinet Product</label>
    <nameField>
        <displayFormat>TCP#{0000}</displayFormat>
        <label>Tooth Cabinet Product Nr</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tooth Cabinet Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>